<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@drawable/mapbox_search_sdk_search_view_background"
    tools:layout_height="match_parent"
    tools:layout_width="match_parent"
    tools:parentTag="com.mapbox.search.ui.view.category.CategorySuggestionSearchView"
    >

    <View
        android:id="@+id/tongue_view"
        android:layout_width="@dimen/mapbox_search_sdk_search_view_tongue_width"
        android:layout_height="@dimen/mapbox_search_sdk_search_view_tongue_height"
        android:layout_marginTop="@dimen/mapbox_search_sdk_search_view_tongue_margin_top"
        android:background="@drawable/mapbox_search_sdk_tongue_view_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/search_feedback_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mapbox_search_sdk_category_suggestion_search_view_title_top_margin"
        android:drawablePadding="@dimen/mapbox_search_sdk_dimen_1x"
        android:gravity="center"
        android:text="@string/mapbox_search_sdk_search_feedback_screen_title"
        android:textAppearance="@style/MapboxSearchSdk.Text.ToolbarTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tongue_view"
        />

    <ImageView
        android:id="@+id/feedback_reason_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mapbox_search_sdk_dimen_1x"
        android:padding="@dimen/mapbox_search_sdk_extra_touch_area"
        android:src="@drawable/mapbox_search_sdk_ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/search_feedback_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_feedback_title"
        app:tint="?attr/mapboxSearchSdkPrimaryAccentColor"
        />

    <ImageView
        android:id="@+id/feedback_reason_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/mapbox_search_sdk_button_extra_tap_area_edge_offset"
        android:padding="@dimen/mapbox_search_sdk_extra_touch_area"
        android:src="@drawable/mapbox_search_sdk_close_drawable"
        app:layout_constraintBottom_toBottomOf="@+id/search_feedback_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_feedback_title"
        app:tint="?attr/mapboxSearchSdkPrimaryAccentColor"
        />

    <TextView
        android:id="@+id/feedback_reason_incorrect_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/mapbox_search_sdk_dimen_8x"
        android:layout_marginTop="@dimen/mapbox_search_sdk_dimen_5x"
        android:drawablePadding="@dimen/mapbox_search_sdk_dimen_3x"
        android:gravity="start|center_vertical"
        android:minHeight="@dimen/mapbox_search_sdk_dimen_12x"
        android:text="@string/mapbox_search_sdk_feedback_card_reason_incorrect_name"
        android:textAppearance="@style/MapboxSearchSdk.Text.Primary"
        tools:drawableStartCompat="@drawable/mapbox_search_sdk_ic_feedback_reason_incorrect_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_feedback_title"
        />

    <TextView
        android:id="@+id/feedback_reason_incorrect_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/mapbox_search_sdk_dimen_8x"
        android:drawablePadding="@dimen/mapbox_search_sdk_dimen_3x"
        android:gravity="start|center_vertical"
        android:minHeight="@dimen/mapbox_search_sdk_dimen_12x"
        android:text="@string/mapbox_search_sdk_feedback_card_reason_incorrect_address"
        android:textAppearance="@style/MapboxSearchSdk.Text.Primary"
        tools:drawableStartCompat="@drawable/mapbox_search_sdk_ic_feedback_reason_incorrect_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_reason_incorrect_name"
        />

    <TextView
        android:id="@+id/feedback_reason_incorrect_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/mapbox_search_sdk_dimen_8x"
        android:drawablePadding="@dimen/mapbox_search_sdk_dimen_3x"
        android:gravity="start|center_vertical"
        android:minHeight="@dimen/mapbox_search_sdk_dimen_12x"
        android:text="@string/mapbox_search_sdk_feedback_card_reason_incorrect_location"
        android:textAppearance="@style/MapboxSearchSdk.Text.Primary"
        tools:drawableStartCompat="@drawable/mapbox_search_sdk_ic_feedback_reason_incorrect_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_reason_incorrect_address"
        />

    <TextView
        android:id="@+id/feedback_reason_incorrect_other"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/mapbox_search_sdk_dimen_8x"
        android:drawablePadding="@dimen/mapbox_search_sdk_dimen_3x"
        android:gravity="start|center_vertical"
        android:minHeight="@dimen/mapbox_search_sdk_dimen_12x"
        android:text="@string/mapbox_search_sdk_feedback_card_reason_other"
        android:textAppearance="@style/MapboxSearchSdk.Text.Primary"
        tools:drawableStartCompat="@drawable/mapbox_search_sdk_ic_three_dots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_reason_incorrect_location"
        />

</merge>
