<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@drawable/mapbox_search_sdk_search_view_background"
    tools:layout_height="match_parent"
    tools:layout_width="match_parent"
    tools:parentTag="com.mapbox.search.ui.view.category.CategorySuggestionSearchView"
    >

    <View
        android:id="@+id/tongue_view"
        android:layout_width="@dimen/mapbox_search_sdk_search_view_tongue_width"
        android:layout_height="@dimen/mapbox_search_sdk_search_view_tongue_height"
        android:layout_marginTop="@dimen/mapbox_search_sdk_search_view_tongue_margin_top"
        android:background="@drawable/mapbox_search_sdk_tongue_view_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/feedback_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mapbox_search_sdk_category_suggestion_search_view_title_top_margin"
        android:drawablePadding="@dimen/mapbox_search_sdk_dimen_1x"
        android:gravity="center"
        android:text="@string/mapbox_search_sdk_search_feedback_screen_title"
        android:textAppearance="@style/MapboxSearchSdk.Text.ToolbarTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tongue_view"
        />

    <ImageView
        android:id="@+id/feedback_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mapbox_search_sdk_dimen_1x"
        android:padding="@dimen/mapbox_search_sdk_extra_touch_area"
        android:src="@drawable/mapbox_search_sdk_ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/feedback_screen_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/feedback_screen_title"
        app:tint="?attr/mapboxSearchSdkPrimaryAccentColor"
        />

    <ImageView
        android:id="@+id/feedback_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/mapbox_search_sdk_button_extra_tap_area_edge_offset"
        android:padding="@dimen/mapbox_search_sdk_extra_touch_area"
        android:src="@drawable/mapbox_search_sdk_close_drawable"
        app:layout_constraintBottom_toBottomOf="@+id/feedback_screen_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/feedback_screen_title"
        app:tint="?attr/mapboxSearchSdkPrimaryAccentColor"
        />

    <TextView
        android:id="@+id/feedback_comment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/mapbox_search_sdk_primary_layout_offset"
        android:layout_marginTop="40dp"
        android:text="@string/mapbox_search_sdk_search_feedback_comment_title"
        android:textAppearance="@style/MapboxSearchSdk.Text.Secondary"
        android:textColor="?attr/mapboxSearchSdkPrimaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_screen_title"
        />

    <EditText
        android:id="@+id/feedback_edit_text"
        style="@style/MapboxSearchSdk.Text.Primary"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/mapbox_search_sdk_primary_layout_offset"
        android:layout_marginTop="@dimen/mapbox_search_sdk_dimen_2x"
        android:layout_marginBottom="@dimen/mapbox_search_sdk_dimen_6x"
        android:background="@drawable/mapbox_search_sdk_search_input_edit_text_background"
        android:gravity="top|start"
        android:hint="@string/mapbox_search_sdk_search_feedback_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:imeOptions="actionDone|flagNoExtractUi"
        android:overScrollMode="always"
        android:padding="@dimen/mapbox_search_sdk_dimen_4x"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:textAlignment="viewStart"
        android:textColorHint="?attr/mapboxSearchSdkPrimaryTextInactiveColor"
        app:layout_constraintBottom_toTopOf="@+id/feedback_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_comment_title"
        />

    <com.mapbox.search.ui.view.common.MapboxSdkButtonWithIcon
        android:id="@+id/feedback_submit"
        style="@style/MapboxSearchSdk.Button.Primary.Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/mapbox_search_sdk_primary_layout_offset"
        android:drawablePadding="@dimen/mapbox_search_sdk_dimen_1x"
        android:gravity="center"
        android:text="@string/mapbox_search_sdk_search_feedback_submit"
        app:layout_constraintBottom_toTopOf="@+id/button_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/button_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"
        />

</merge>
