<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/favorite_edit_layout"
    tools:ignore="UnusedAttribute"
    tools:parentTag="com.mapbox.search.ui.view.favorite.rename.EditFavoriteView"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/mapbox_search_sdk_toolbar_elevation"
        android:minHeight="@dimen/mapbox_search_sdk_toolbar_height"
        >

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mapbox_search_sdk_dimen_1x"
            android:padding="@dimen/mapbox_search_sdk_extra_touch_area"
            android:src="@drawable/mapbox_search_sdk_close_drawable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/mapboxSearchSdkPrimaryAccentColor"
            />

        <ImageView
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/mapbox_search_sdk_dimen_1x"
            android:padding="@dimen/mapbox_search_sdk_extra_touch_area"
            android:src="@drawable/mapbox_search_sdk_button_check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/mapboxSearchSdkPrimaryAccentColor"
            />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mapbox_search_sdk_dimen_1x"
            android:gravity="start"
            android:text="@string/mapbox_search_sdk_favorite_screen_rename_title"
            android:textAlignment="viewStart"
            android:textAppearance="@style/MapboxSearchSdk.Text.ToolbarTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/done_button"
            app:layout_constraintStart_toEndOf="@+id/close_button"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="@dimen/mapbox_search_sdk_dimen_8x"
        android:layout_marginTop="@dimen/mapbox_search_sdk_dimen_5x"
        android:text="@string/mapbox_search_sdk_favorite_screen_rename_name_title"
        android:textAppearance="@style/MapboxSearchSdk.Text.BoldHeader"
        />

    <FrameLayout
        android:id="@+id/search_input_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mapbox_search_sdk_search_input_view_edit_text_height"
        android:layout_marginHorizontal="@dimen/mapbox_search_sdk_primary_layout_offset"
        android:layout_marginTop="@dimen/mapbox_search_sdk_dimen_2x"
        android:background="@drawable/mapbox_search_sdk_search_input_edit_text_background"
        >

        <EditText
            android:id="@+id/search_input_edit_text"
            style="@style/MapboxSearchSdk.Text.Primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:drawablePadding="@dimen/mapbox_search_sdk_list_item_icon_horizontal_margin"
            android:drawableTint="?attr/mapboxSearchSdkIconTintColor"
            android:hint="@string/mapbox_search_sdk_favorite_screen_rename_name_title"
            android:imeOptions="flagNoExtractUi"
            android:importantForAutofill="no"
            android:inputType="textVisiblePassword"
            android:maxLines="1"
            android:paddingStart="@dimen/mapbox_search_sdk_list_item_icon_horizontal_margin"
            android:paddingEnd="@dimen/mapbox_search_sdk_search_input_view_edit_text_padding_end"
            android:textAlignment="viewStart"
            android:textColorHint="?attr/mapboxSearchSdkPrimaryTextInactiveColor"
            tools:drawableStart="@drawable/mapbox_search_sdk_ic_favorite_uncategorized"
            />

        <ImageView
            android:id="@+id/clear_text_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:padding="@dimen/mapbox_search_sdk_list_item_icon_horizontal_margin"
            android:src="@drawable/mapbox_search_sdk_ic_clear_button"
            app:tint="?attr/mapboxSearchSdkInputViewClearIconColor"
            />
    </FrameLayout>

    <TextView
        android:id="@+id/address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="@dimen/mapbox_search_sdk_dimen_8x"
        android:layout_marginTop="@dimen/mapbox_search_sdk_dimen_7x"
        android:text="@string/mapbox_search_sdk_favorite_screen_rename_address_title"
        android:textAppearance="@style/MapboxSearchSdk.Text.BoldHeader"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="@dimen/mapbox_search_sdk_dimen_8x"
        android:layout_marginTop="@dimen/mapbox_search_sdk_dimen_2x"
        android:gravity="start"
        android:textAlignment="viewStart"
        android:textAppearance="@style/MapboxSearchSdk.Text.Primary"
        android:visibility="gone"
        tools:text="Belarus, Minsk, 111 111, Yakuba Kolosa 123/5"
        tools:visibility="visible"
        />
</merge>
